2008-11-09  Wojciech Polak  <polak@gnu.org>

	Fix typos.
	
	* doc/texinfo/mailcap.texi, doc/texinfo/mailutils.texi
	doc/texinfo/mom.texi, doc/texinfo/mu-mh.texi,
	doc/texinfo/mu_message.texi, doc/texinfo/programs.texi,
	doc/texinfo/sieve.texi: Fix typos.

2008-11-09  Sergey Poznyakoff  <gray@gnu.org.ua>

	Rewrite default mailbox format support to make sure it does not
	break format autodetection. Improve the docs.
	
	* configure.ac (MU_DEFAULT_SCHEME): New configuration variable.
	* mailbox/version.c (mu_conf_opt): Include default scheme.
	
	* examples/mimetest.c, examples/mta.c, libmu_scm/mu_scm.c: Remove
	mu_path_record. Use mu_registrar_set_default_record.

	* libproto/mbox/folder.c (_path_is_scheme): Rename to
	_mbox_is_scheme. Minor changes as well.
	(_path_record, mu_path_record): Removed.
	(_mbox_record): Use _mbox_is_scheme.

	* libsieve/actions.c: Remove unused variable.
	
	* include/mailutils/Makefile.am (types.h rule): Replace
	_MU_DEFAULT_RECORD_. Change MU_OFF_TYPE replacement pattern to
	_MU_OFF_TYPE_.
	
	* include/mailutils/mailbox.h (mu_mailbox_set_default_proto)
	(mu_mailbox_get_default_proto): Remove. See below.
	* include/mailutils/registrar.h (mu_registrar_set_default_scheme)
	(mu_registrar_get_default_scheme)
	(mu_registrar_get_default_record)
	(mu_registrar_set_default_record)
	(mu_registrar_lookup_scheme): New prototypes.
	(mu_path_record): Remove.
	(mu_register_all_mbox_formats): Remove mu_path_record.
	Set default scheme using mu_registrar_set_default_record.
	(mu_register_local_mbox_formats): Likewise.
	* include/mailutils/types.hin (MU_OFF_TYPE): Rename to
	_MU_OFF_TYPE_.
	(MU_DEFAULT_RECORD): New define.

	* mailbox/mailbox.c (mu_mailbox_set_default_proto)
	(mu_mailbox_get_default_proto): Remove.
	(mu_mailbox_create): Remove default_proto kludge. mu_registrar
	stuff is responsible for finding the correct record.
	* mailbox/registrar.c (mu_registrar_set_default_record)
	(mu_registrar_get_default_record)
	(mu_registrar_set_default_scheme)